Fixes for Java 8 compatibility